k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: commit
  labels:
    name: commit
    managed-by: terraform
